--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "typescript": "^3.6.4"
   },
   "peerDependencies": {
-    "graphql": "^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0"
+    "graphql": "^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0"
   },
   "husky": {
     "hooks": {
